Changelog
=========

2.1 (unreleased)
================

- Fix CSS table prenotazioni [nicolasenno]
- Hide refused review_state slots for anonymous users [alert]
- Fix review_state refused permissions [alert]
- Correctly take into account futureDays parameter [alert]
- Temporarily enabled actions menu [nicolasenno]
- Don't check overbooking in Prenotazione post_validate [alert]
- Fix the review_state after copy [alert]
- Added new workflow transition and its upgrade step [nicolasenno]
- Added fields validation (email, phone) for prenotazioni form [nicolasenno]
- Added events logger for IPrenotazione [nicolasenno]
- Modified contentrules [nicolasenno]
- Modified workflow to add refused state [nicolasenno]
- We can add prenotazioni only through the calendar links [alert]
- Anonymous users can book again [alert]
- Autoinclude dependencies zcml [alert]
- Use captchas for anonymous users [alert]
- Upgrade step for installing `quintagroup.formlib.captcha`__ [alert]
- Removed customized createObject view [alert]
- We can now handle more than one gate [alert]
- Overbooking validation handled through an adapter [alert]
- Do not allow users to add stuff in the past [alert]

__ http://plone.org/products/quintagroup.formlib.captcha

2.0 (2013-05-03)
================

- Plone 4 support added [cekk]
- Added Site Administrator role in rolemap and workflows [cekk]
- Fixed translation for month in folder view [cekk]
- Fixed mailhost send method (removed securesend) [cekk]
- Created new event raised when a booking is rescheduled [cekk]
- Added new contentrule that notify an user when his booking has re-scheduled [cekk]
- Added locales support [cekk]
- Fixed layout styles and accessibility [keul]
- Do not show reservation object in navigation [keul]
- Removed useless portal_skins elements [keul]
- Removed bad ploneCustom.css css, moved to a dedicated CSS [keul]
- Content types are now in english and translated [keul]
- PrenotazioniFolder end date is not required anymore